--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@builder.io/admin-sdk": "^0.0.8",
     "@builder.io/dev-tools": "^1.3.3",
     "@builder.io/react": "^8.0.0",
     "@builder.io/sdk": "^6.0.0",
